--- a/web-resources.html
+++ b/web-resources.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="./assets/components/toggleTheme/js/InicialThemeUser.js"></script>
-
     <!-- Global CSS -->
     <link rel="stylesheet" href="./assets/css/all.css">
     <!-- ------------------------------------------------------------------------------------- -->
 
     <!-- Components CSS -->
-    <link rel="stylesheet" href="./assets/components/toggleTheme/css/toggleTheme.css">
     <link rel="stylesheet" href="./assets/components/navbar/css/navbar.css">
     <link rel="stylesheet" href="./assets/components/footer/css/footer.css">
     <!-- ------------------------------------------------------------------------------------- -->
@@ -38,12 +35,6 @@
                     <div class="container-btn">
                         <button type="button" class="btn-open-close closed-menu">
                             <i class="size-icon fa-solid fa-xmark"></i>
-                        </button>
-                        <button class="dark-mode-btn" aria-label="Activar modo oscuro">
-                            <i class='bx bx-sun'></i>
-                        </button>
-                        <button class="light-mode-btn" aria-label="Activar modo claro">
-                            <i class='bx bx-moon'></i>
                         </button>
                     </div>
                     <ul class="menu">
@@ -78,7 +69,6 @@
 
     <!-- Components -->
     <script src="./assets/components/navbar/js/navbar.js"></script>
-    <script defer src="./assets/components/toggleTheme/js/toggleTheme.js"></script>
     <!-- ------------------------------------------------------------------------------------- -->
 
     <!-- CDN -->
